--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -219,7 +219,7 @@
 ) {
   $title-font-size: $font-size-x-large;
 
-  $subtitle-font-size: $font-size-small;
+  $subtitle-font-size: $font-size-xx-small;
   $subtitle-alignment: $title-alignment;
 
   $text-color: $body-color;
