--- a/_sass/pages/_join.scss
+++ b/_sass/pages/_join.scss
@@ -1,3 +1,9 @@
+.page-join-us {
+  .page-subfooter {
+    background-color: $green-300;
+  }
+}
+
 .page--join__text {
   h2 {
     font-size: $font-size-xxx-large;
