--- a/_sass/pages/_services.scss
+++ b/_sass/pages/_services.scss
@@ -1,3 +1,9 @@
+.page-work {
+  .page-subfooter {
+    background-color: $sk-blue-light;
+  }
+}
+
 .our-services {
   @extend %page-main-base;
   @extend %wide-column;
