--- a/_sass/pages/_talks.scss
+++ b/_sass/pages/_talks.scss
@@ -1,11 +1,5 @@
-.page-talks {
+.page-thoughts {
   .page-subfooter {
     background-color: $red-200;
-  }
-}
-
-.talk__featured {
-  p {
-    // color: $gray-200;
   }
 }
