--- a/_sass/pages/_contracting.scss
+++ b/_sass/pages/_contracting.scss
@@ -1,3 +1,17 @@
+.page-connect {
+  .page-subfooter {
+    background-color: $sk-yellow;
+
+    * {
+      color: $body-color;
+    }
+
+    .page-subfooter__divider {
+      background-color: $ochre-200;
+    }
+  }
+}
+
 .badge-sub--container {
   display: inline-block;
   margin-left: 0.5em;
