update lists and tables

--- a/_sass/bootstrap/_variables.scss
+++ b/_sass/bootstrap/_variables.scss
@@ -373,7 +373,7 @@ $table-head-bg: $gray-lighter !default;
 $table-head-color: $gray !default;
 
 $table-border-width: $border-width !default;
-$table-border-color: $gray-lighter !default;
+$table-border-color: $black !default;
 
 // Buttons
 //
