--- a/_sass/bootstrap/_tables.scss
+++ b/_sass/bootstrap/_tables.scss
@@ -11,12 +11,13 @@
   td {
     padding: $table-cell-padding;
     vertical-align: top;
-    border-top: $table-border-width solid $table-border-color;
+    border-top: $table-border-width dotted $table-border-color;
   }
 
   thead th {
     vertical-align: bottom;
-    border-bottom: (2 * $table-border-width) solid $table-border-color;
+    border-bottom: (1 * $table-border-width) solid $table-border-color;
+    border-top: none;
   }
 
   tbody + tbody {
