--- a/_includes/hero_banner.html
+++ b/_includes/hero_banner.html
@@ -20,7 +20,7 @@
         {{ page.title }}
       {% endif %}
     </{% if page.layout == "toolkit" %}p{% else %}h1{% endif %}>
-    <p class="hero-content {% if include.text == 'dark' %}text-body{% endif %}">
+    <p class="hero-content {% if include.text == 'dark' %}text-ink{% endif %}">
       {% if page.layout == "toolkit" %}
         {{ site.data.toolkits[page.sidenav].description }}
       {% else %}
