--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -102,7 +102,7 @@
     margin-top: 1rem;
     text-shadow: $card-box-shadow;
 
-    &.text-body {
+    &.text-ink {
       text-shadow: none;
     }
   }
