add colored nav

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,7 +39,7 @@
             <a class="dropdown-item" href="/company/press/">Press</a>
           </div>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item nav-item--work dropdown">
           <a
             class="nav-link dropdown-toggle"
             href="#"
@@ -57,7 +57,7 @@
             <a class="dropdown-item" href="/work/toolkits/">Toolkits</a>
           </div>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item nav-item--careers dropdown">
           <a
             class="nav-link dropdown-toggle"
             href="#"
@@ -73,7 +73,7 @@
             <a class="dropdown-item" href="/careers/join/">Join us</a>
           </div>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item nav-item--thoughts dropdown">
           <a
             class="nav-link dropdown-toggle"
             href="#"
@@ -90,7 +90,7 @@
             <a class="dropdown-item" href="/thoughts/talks/">Talks</a>
           </div>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item nav-item--connect dropdown">
           <a
             class="nav-link dropdown-toggle"
             href="#"
