update arrow icons

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -34,6 +34,7 @@ $ochre-60: #f8dc9d;
 $ochre-80: #f6d17d;
 $ochre-100: #f4c55c;
 $ochre-200: #e99821;
+$ochre-300: #a66910;
 
 $gray-1: #f8f8f8;
 $gray-20: #ddddde;
