--- a/_includes/join_us_cta.html
+++ b/_includes/join_us_cta.html
@@ -4,5 +4,5 @@
   text_css_class = "page-subfooter-text-col"
   cta_path = "/careers/join/"
   cta = "Join us"
-  icon_css_class = "fa fa-chevron-right"
+  icon_css_class = "fal fa-long-arrow-right"
 %}
