--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -4,7 +4,7 @@
     <div class="">
     {% if paginator.previous_page %}
       <a class="" href="{{ paginator.previous_page_path | prepend: site.baseurl }}">
-        <i class="fa fa-chevron-left mr-2 pagination-icon"></i><b>Previous</b>
+        <i class="fal fa-long-arrow-left mr-2 pagination-icon"></i><b>Previous</b>
       </a>
     {% endif %}
     </div>
@@ -14,7 +14,7 @@
     <div class="">
     {% if paginator.next_page %}
       <a class="" href="{{ paginator.next_page_path | prepend: site.baseurl }}">
-        <b>Next</b><i class="fa fa-chevron-right ml-2 pagination-icon"></i>
+        <b>Next</b><i class="fal fa-long-arrow-right ml-2 pagination-icon"></i>
       </a>
     {% endif %}
     </div>
