--- a/_includes/intro_cta.html
+++ b/_includes/intro_cta.html
@@ -3,6 +3,6 @@
   text = "Interested in Skylight, but not ready to apply? Connect with us by dropping us an email."
   text_css_class = "page-subfooter-text-col"
   cta_path = "mailto:hello@skylight.digital"
-  cta = "Email Us"
+  cta = "Email us"
   icon_css_class = "fa fa-at"
 %}
