--- a/_includes/get_expert_answers_cta.html
+++ b/_includes/get_expert_answers_cta.html
@@ -3,6 +3,6 @@
   text = "Have a question about something? Our experts love to share what they know. Drop us an email and we'll get you connected."
   text_css_class = "page-subfooter-text-col"
   cta_path = "mailto:communities@skylight.digital"
-  cta = "Email Us"
+  cta = "Email us"
   icon_css_class = "fa fa-at"
 %}
