--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -171,8 +171,12 @@
   }
 }
 
+.nav-item--company {
+  @include navlink-color($blue-100-a);
+}
+
 .nav-item--work {
-  @include navlink-color($blue-100);
+  @include navlink-color($brand-primary);
 }
 
 .nav-item--careers {
