--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,9 @@
   <nav class="navbar">
     <div class="navbar-flex-container">
       {% if page.title == "Home" %}
-        <h1><a class="navbar-logo" href="/">Skylight</a></h1>
+      <h1><a class="navbar-logo" href="/">Skylight</a></h1>
       {% else %}
-        <a class="navbar-logo" href="/">Skylight</a>
+      <a class="navbar-logo" href="/">Skylight</a>
       {% endif %}
       <div
         class="navbar-toggler"
@@ -21,7 +21,7 @@
 
     <div id="navbar-nav-collapsible" class="collapse navbar-collapse">
       <ul class="navbar-nav">
-        <li class="nav-item dropdown">
+        <li class="nav-item nav-item--company dropdown">
           <a
             class="nav-link dropdown-toggle"
             href="#"
