--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -10,7 +10,7 @@ $blue-40: #b5d2e3;
 $blue-60: #90bcd6;
 $blue-80: #6ba5c8;
 $blue-100: #468fba;
-$blue-100-a: #3d7da3;
+$blue-100-a: #277db0;
 $blue-200: #1d5392;
 $blue-300: #031a54;
 
