--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -101,7 +101,7 @@ $heading-color: $gray-300;
 
 // Links
 $link-color: $brand-primary;
-$link-hover-color: $brand-primary-light;
+$link-hover-color: $blue-100-a;
 $link-hover-decoration: none;
 
 // Fonts
