--- a/_includes/filter_component.html
+++ b/_includes/filter_component.html
@@ -56,7 +56,7 @@
       id="accordionHeading-{{include.accordion_index}}"
     >
       <a
-        class="bg-gray-light collapsed"
+        class="collapsed"
         data-toggle="collapse"
         href="#accordionCollapse-{{include.accordion_index}}"
         aria-expanded="false"
@@ -68,7 +68,6 @@
             <div class="text-ink">
               Filters
             </div>
-            <div class="plus-minus-toggle"></div>
           </h2>
         </div>
       </a>
