Adds time stamp to twitter image

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -114,7 +114,7 @@
   <meta name="twitter:site" content="@{{twitter_username}}">
   <meta name="twitter:title" content="{{title}}">
   <meta name="twitter:description" content="{{description}}">
-  <meta name="twitter:image" content="{{image}}">
+  <meta name="twitter:image" content="{{image}}?{{ 'now' | date: '%d%S%L%m' }}">
   <meta name="twitter:image:alt" content="{{image_description}}">
 
   <script type="application/ld+json">
