--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -130,6 +130,7 @@ $font-size-h4: $font-size-small;
 $font-size-h5: 1.25rem;
 
 $font-weight-normal: 400;
+$font-weight-medium: 500;
 $font-weight-bold: 600;
 
 $headings-margin-bottom: 0;
