--- a/_sass/pages/_project.scss
+++ b/_sass/pages/_project.scss
@@ -24,6 +24,7 @@
   @extend %text-uppercase;
   color: $gray-light;
   font-family: $font-family-mono;
+  font-weight: $font-weight-medium;
   margin-bottom: 0.7rem;
   text-align: left;
 }
