--- a/_includes/head.html
+++ b/_includes/head.html
@@ -242,7 +242,7 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}?{{site.time | date: '%s%N'}}" type="text/css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
-    href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,400;0,600;1,400&family=Roboto+Mono:wght@400;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,400;0,600;1,400&family=Roboto+Mono:wght@400;500;700&display=swap"
     rel="stylesheet"
   />
   {% if page.preload %}
