--- a/_sass/bootstrap/utilities/_text.scss
+++ b/_sass/bootstrap/utilities/_text.scss
@@ -29,6 +29,7 @@
 // Weight and italics
 
 .font-weight-normal { font-weight: $font-weight-normal; }
+.font-weight-medium   { font-weight: $font-weight-medium; }
 .font-weight-bold   { font-weight: $font-weight-bold; }
 .font-italic        { font-style: italic; }
 
