--- a/_sass/pages/_filter.scss
+++ b/_sass/pages/_filter.scss
@@ -96,7 +96,7 @@
   @extend %text-muted;
   font-family: $font-family-mono;
   font-size: $font-size-xxx-small;
-  font-weight: normal;
+  font-weight: $font-weight-medium;
 }
 
 .filter-count {
@@ -104,6 +104,7 @@
   @extend %text-muted;
   font-family: $font-family-mono;
   font-size: $font-size-small;
+  font-weight: $font-weight-medium;
   text-transform: uppercase;
 }
 
