widen prose max width

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -142,7 +142,7 @@ $text-muted: $gray-light;
 
 $list-inline-padding: 0;
 
-$prose-max-width: 636px;
+$prose-max-width: 72ex;
 
 // Navbar
 $navbar-padding-x: 0;
