update join page

--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -38,7 +38,7 @@
 
 .employee-subtitle {
   font-family: $font-family-mono;
-  font-weight: normal;
+  font-weight: $font-weight-medium;
 }
 
 @include multi-col-spacing("employee-col", $mb-size: 4, $mb-md-size: 5);
