--- a/_sass/pages/_join.scss
+++ b/_sass/pages/_join.scss
@@ -1,3 +1,15 @@
+.page-join-us {
+  .join__quote {
+    font-size: $font-size-x-large;
+    line-height: 1.5;
+  }
+
+  .quote-text {
+    color: $green-300;
+    font-size: $font-size-x-large;
+  }
+}
+
 .page--join__text {
   h2 {
     font-size: $font-size-xxx-large;
@@ -24,10 +36,6 @@
   p {
     margin-bottom: 0;
   }
-
-  .quote-text + p {
-    font-size: $font-size-medium;
-  }
 }
 
 .section__care-package {
@@ -51,10 +59,6 @@
       font-size: $font-size-x-small;
     }
   }
-
-  li {
-    border: 2px solid $gray-lightest;
-  }
 }
 
 .open-positions-title {
@@ -69,7 +73,13 @@
 }
 
 .open-positions-heading.open-positions-heading {
-  margin-top: 2.5em;
+  font-family: $font-family-mono;
+  font-size: $font-size-small;
+  text-transform: uppercase;
+}
+
+.open-positions__location {
+  color: $gray;
 }
 
 .care-square {
