--- a/_includes/open_positions.html
+++ b/_includes/open_positions.html
@@ -7,17 +7,17 @@
     {% assign groups = site.data.open_positions | group_by: 'category' | sort: 'order' %}
     {% for group in groups %}
       <h3 class="open-positions-heading">{{ group.name }}</h3>
+      <ul>
       {% for item in group.items %}
-        <ul>
-          <li class="rounded p-3">
-            <a class="no-border open-positions-title" href="{{ item.url }}" title="View job posting for {{ item.title }}">
-              {{ item.title }}
-            </a>
-            <p><i class="fa fa-globe mr-2"></i>{{ item.location }}</p>
-            <div class="mt-1 open-positions-summary">{{ item.summary | markdownify }}</div>
-          </li>
-        </ul>
+        <li>
+          <a class="no-border open-positions-title" href="{{ item.url }}" title="View job posting for {{ item.title }}">
+            {{ item.title }}
+          </a>
+          <p class="open-positions__location"><i class="fa fa-globe mr-2"></i>{{ item.location }}</p>
+          <div class="mt-1 open-positions-summary">{{ item.summary | markdownify }}</div>
+        </li>
       {% endfor %}
+      </ul>
     {% endfor %}
   </div>
 
