--- a/_sass/pages/_join.scss
+++ b/_sass/pages/_join.scss
@@ -8,6 +8,10 @@
     color: $green-300;
     font-size: $font-size-x-large;
   }
+
+  .image-list {
+    margin-top: 1rem;
+  }
 }
 
 .page--join__text {
