--- a/_sass/bootstrap/_type.scss
+++ b/_sass/bootstrap/_type.scss
@@ -153,8 +153,10 @@ mark,
   }
 
   cite {
+    display: block;
     font-style: normal;
     font-weight: normal;
+    margin-top: 1.75rem;
   }
 }
 
