update quote cite style

--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -84,8 +84,13 @@
   @extend %blockquote;
   @extend %my-4;
 
-  cite::before {
-    content: "– ";
+  cite {
+    display: block;
+    margin-top: 1.75rem;
+
+    &::before {
+      content: "– ";
+    }
   }
 
   &.excerpt {
