--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -24,11 +24,11 @@
 }
 
 .bg-red {
-  background-color: $sk-red;
+  background-color: $red-200;
 }
 
 .bg-green {
-  background-color: $sk-green;
+  background-color: $green-300;
 }
 
 .bg-blue {
