rm bottom border from expanded filter btn

--- a/_sass/_accordion.scss
+++ b/_sass/_accordion.scss
@@ -99,6 +99,10 @@
 .accordion-filter {
   .accordion-header {
     width: fit-content;
+
+    a[aria-expanded="true"] {
+      border-bottom: none;
+    }
   }
 
   .accordion-card-body {
