increasr card font size

--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -223,7 +223,7 @@
   $subtitle-alignment: $title-alignment;
 
   $text-color: $body-color;
-  $text-font-size: $font-size-small;
+  $text-font-size: $font-size-medium;
   $text-alignment: left;
 
   $footer-alignment: $title-alignment;
