--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -96,8 +96,10 @@
 }
 
 .landing__callout--footer {
-  margin-bottom: 6.875rem;
-  margin-top: 11.25rem;
+  @include media-breakpoint-up(md) {
+    margin-bottom: 6.875rem;
+    margin-top: 11.25rem;
+  }
 }
 
 .landing-info-row {
@@ -142,7 +144,7 @@
   &:first-child {
     @extend %mb-3;
     @extend %mb-lg-0;
-    margin-right: 1.5rem;
+    margin-inline: 0.75rem;
   }
 
   a {
