--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -105,7 +105,6 @@
     box-shadow: 100px 0;
   }
 
-
   .text-intro {
     margin-top: 1em;
   }
@@ -118,9 +117,10 @@
 
   h3 {
     font-size: $font-size-small;
-    letter-spacing: 0.05em;
     line-height: 1.375;
     text-transform: uppercase;
+    font-family: $font-family-mono;
+    font-weight: $font-weight-medium;
   }
 
   p {
@@ -164,7 +164,8 @@ $outline-light: 2px solid #f2f2f2;
   border: $card-border-width solid $card-border-color;
 }
 
-.tuition-card.tuition-card { // higher specificity so it doesn't inheret link styles
+.tuition-card.tuition-card {
+  // higher specificity so it doesn't inheret link styles
   @include border-radius($border-radius);
   border: $card-border-width solid $card-border-color;
   box-shadow: $card-box-shadow;
@@ -179,7 +180,6 @@ $outline-light: 2px solid #f2f2f2;
   }
 
   p {
-
   }
 }
 
@@ -261,4 +261,3 @@ $outline-light: 2px solid #f2f2f2;
     }
   }
 }
-
