--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -53,7 +53,7 @@
     line-height: 1.2;
 
     @include media-breakpoint-up(sm) {
-      font-size: 52px;
+      font-size: 48px;
     }
   }
 
@@ -79,7 +79,7 @@
   margin-top: 3rem;
 
   @include media-breakpoint-up(md) {
-    margin-top: 11rem;
+    margin-top: 8rem;
   }
 }
 
@@ -92,14 +92,13 @@
   margin-bottom: 3rem;
 
   @include media-breakpoint-up(md) {
-    margin-bottom: 10rem;
+    margin-bottom: 8rem;
   }
 }
 
 .landing__callout--footer {
   @include media-breakpoint-up(md) {
-    margin-bottom: 6.875rem;
-    margin-top: 11.25rem;
+    margin-block: 8rem;
   }
 }
 
