Add space between open position categories

--- a/_sass/pages/_join.scss
+++ b/_sass/pages/_join.scss
@@ -80,6 +80,7 @@
   font-family: $font-family-mono;
   font-size: $font-size-small;
   font-weight: $font-weight-medium;
+  margin-top: 4rem;
   text-transform: uppercase;
 }
 
