--- a/_sass/_accordion.scss
+++ b/_sass/_accordion.scss
@@ -9,14 +9,14 @@
     display: block;
     padding: 1em;
 
+    &:hover h3 {
+      font-weight: bold;
+    }
+
     &:hover,
     &:focus {
       border-bottom: 1px solid $black;
       color: $brand-primary;
-
-      h3 {
-        font-weight: bold;
-      }
     }
 
     &[aria-expanded="true"] {
