--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -14,6 +14,11 @@
     padding-top: 56px;
   }
 
+  .post-blockquote {
+    background-color: $ochre-20;
+    color: $black;
+  }
+
   .accordion-header h3 {
     font-family: $font-family-sans-serif;
   }
