Make the home callout more narrow again

--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -117,7 +117,8 @@
   @extend %mx-auto;
 }
 
-.landing-content-primary-col {
+.landing-content-primary-col,
+.landing-content-secondary-col {
   @extend %col-lg-8;
   @extend %mb-4;
 }
