Add line breaks to hero text

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -113,3 +113,11 @@
   cursor: default;
   text-decoration: none;
 }
+
+.linebreak {
+  display: none;
+
+  @include media-breakpoint-up(sm) {
+    display: block;
+  }
+}
