--- a/_sass/pages/_join.scss
+++ b/_sass/pages/_join.scss
@@ -80,8 +80,11 @@
   font-family: $font-family-mono;
   font-size: $font-size-small;
   font-weight: $font-weight-medium;
-  margin-top: 4rem;
   text-transform: uppercase;
+
+  &:not(:first-of-type) {
+    margin-top: 4rem;
+  }
 }
 
 .open-positions__location {
