--- a/_includes/hero_banner.html
+++ b/_includes/hero_banner.html
@@ -20,13 +20,13 @@
         {{ page.title }}
       {% endif %}
     </{% if page.layout == "toolkit" %}p{% else %}h1{% endif %}>
-    <p class="hero-content {% if include.text == 'dark' %}text-ink{% endif %}">
+    <div class="hero-content {% if include.text == 'dark' %}text-ink{% endif %}">
       {% if page.layout == "toolkit" %}
         {{ site.data.toolkits[page.sidenav].description }}
       {% else %}
-        {{ include.hero_content }}
+        {{ include.hero_content | markdownify }}
       {% endif %}
-    </p>
+    </div>
   </div>
 </header>
 </div>
