fix toolkit hero

--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -6,6 +6,7 @@ preload: hero-toolkits.svg
 {% include hero_banner.html
   color = "blue"
   image = 'hero-toolkits.svg'
+  class = "hero--toolkits"
 %}
 
 <div class="container">
