--- a/_includes/hero_banner.html
+++ b/_includes/hero_banner.html
@@ -9,8 +9,8 @@
       background-size: cover;"
   {% endif %}
 >
-<header class="hero hero-banner mb-5">
-  <div class="hero-container container-fluid text-center page--join__text">
+<header class="hero hero-banner mb-5 {% if include.class %}{{ include.class }}{% endif %}">
+  <div class="hero-container container-fluid text-center">
     <{% if page.layout == "toolkit" %}p{% else %}h1{% endif %} class="hero-heading {% if include.text == 'dark' %}text-ink{% endif %}">
       {% if include.hero_title %}
         {{ include.hero_title }}
