--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -22,6 +22,7 @@
   color: $white;
   font-weight: $headings-font-weight;
   line-height: $headings-line-height;
+  margin-bottom: 0;
 
   @include media-breakpoint-up(sm) {
     font-size: $font-size-h2;
@@ -34,6 +35,10 @@
   line-height: 1.5;
   margin-bottom: 0;
   margin-top: 1.5rem;
+
+  p {
+    margin-bottom: 0;
+  }
 }
 
 .hero-btn-group {
