fix blockquote link color

--- a/_sass/bootstrap/_type.scss
+++ b/_sass/bootstrap/_type.scss
@@ -152,6 +152,11 @@ mark,
     position: absolute;
   }
 
+  a {
+    color: $white !important;
+    border-bottom-color: $white !important;
+  }
+
   cite {
     font-style: normal;
     font-weight: normal;
