--- a/_includes/project.html
+++ b/_includes/project.html
@@ -1,4 +1,4 @@
-<article class="project-case-study">
+<article class="project-case-study container maxw-md">
   <div class="project-case-study-row">
     <div class="project-case-study-col">
       <header class="project-case-study-header">
