--- a/_includes/testimonial_cta.html
+++ b/_includes/testimonial_cta.html
@@ -1,26 +1,21 @@
 <div class="page-subfooter">
   <div class="testimonial">
-    <div class="testimonial-row">
-      <div class="testimonial-col">
-        <blockquote>
-          <p class="testimonial-quote">
-            “You’d be hard pressed to find a greater assemblage of digital
-            talent.”
-          </p>
-          <div class="d-flex justify-content-center my-4">
-            <div class="page-subfooter__divider"></div>
-          </div>
-          <cite class="testimonial-cite">
-            <span class="testimonial-author">Luke McCormack</span>
-            <span class="testimonial-position"
-              >Former Chief Information Officer</span
-            >
-            <span class="testimonial-org"
-              ><strong>Department of Homeland Security</strong></span
-            >
-          </cite>
-        </blockquote>
+    <blockquote>
+      <p class="testimonial-quote">
+        “You’d be hard pressed to find a greater assemblage of digital talent.”
+      </p>
+      <div class="d-flex justify-content-center my-4">
+        <div class="page-subfooter__divider"></div>
       </div>
-    </div>
+      <cite class="testimonial-cite">
+        <span class="testimonial-author">Luke McCormack</span>
+        <span class="testimonial-position"
+          >Former Chief Information Officer</span
+        >
+        <span class="testimonial-org"
+          ><strong>Department of Homeland Security</strong></span
+        >
+      </cite>
+    </blockquote>
   </div>
 </div>
