--- a/_sass/_spacing.scss
+++ b/_sass/_spacing.scss
@@ -93,8 +93,16 @@
   max-width: 480px;
 }
 
+.maxw-md {
+  max-width: 800px !important;
+}
+
 .maxw-lg {
-  max-width: 800px;
+  max-width: 840px !important;
+}
+
+.maxw-xl {
+  max-width: 1024px !important;
 }
 
 .p-205 {
