--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -174,8 +174,7 @@ h6 {
 }
 
 .margin-heading {
-  margin-bottom: 0.5em;
-  margin-top: 1.5em;
+  @include margin-heading;
 }
 
 @mixin list {
@@ -211,7 +210,7 @@ h6 {
 }
 
 .maxw-prose {
-  max-width: $prose-max-width;
+  max-width: $prose-max-width !important;
 }
 
 .font-lg {
