--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,7 @@
   {% assign site_title = site.title | xml_escape %}
   {% assign site_description = site.description | xml_escape %}
   {% assign site_image = site_url | append: '/img/logo-social.png' %}
+  {% assign site_image_twitter = site_url | append: '/img/logo-social-twitter.png' %}
   {% assign site_image_description = 'Skylight Logo' %}
   {% assign site_keywords = site.keywords %}
   {% assign site_published = site.published %}
@@ -47,9 +48,11 @@
 
   {% if page.image and page.image_description %}
     {% assign image = site_url | append: page.image %}
+    {% assign image_twitter = site_url | append: page.image %}
     {% assign image_description = page.image_description %}
   {% else %}
     {% assign image = site_image %}
+    {% assign image_twitter = site_image_twitter %}
     {% assign image_description = site_image_description %}
   {% endif %}
 
@@ -114,7 +117,7 @@
   <meta name="twitter:site" content="@{{twitter_username}}">
   <meta name="twitter:title" content="{{title}}">
   <meta name="twitter:description" content="{{description}}">
-  <meta name="twitter:image" content="{{image}}?{{ 'now' | date: '%d%S%L%m' }}">
+  <meta name="twitter:image" content="{{image_twitter}}?{{ 'now' | date: '%d%S%L%m' }}">
   <meta name="twitter:image:alt" content="{{image_description}}">
 
   <script type="application/ld+json">
