--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
   {% assign site_title = site.title | xml_escape %}
   {% assign site_description = site.description | xml_escape %}
   {% assign site_image = site_url | append: '/img/logo-social.png' %}
-  {% assign site_image_twitter = site_url | append: '/img/logo-social-twitter.png' %}
+  {% assign site_image_twitter = '/img/logo-social-twitter.png' %}
   {% assign site_image_description = 'Skylight Logo' %}
   {% assign site_keywords = site.keywords %}
   {% assign site_published = site.published %}
