--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -9,7 +9,7 @@ preload: hero-toolkits.svg
   class = "hero--toolkits"
 %}
 
-<div class="container">
+<div class="grid-container">
   <div class="row d-flex">
     <div class="sidenav col-12 col-md-3 order-2 order-md-1">
       <div class="">
