--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -68,6 +68,13 @@ $font-size-xx-small: 0.875rem; // 14px
 $font-size-xxx-small: 0.8125rem; // 13px
 $font-size-xxxx-small: 0.75rem; // 12px
 
+// Spacing sizes
+$size-mobile-lg: 480px;
+$size-md: 800px;
+$size-lg: 840px;
+$size-desktop: 1024px;
+$size-desktop-lg: 1200px;
+
 // Bootstrap overrides
 //
 // Copy variables from `_variables.scss` to this file to override default values
