--- a/_sass/_spacing.scss
+++ b/_sass/_spacing.scss
@@ -105,6 +105,10 @@
   max-width: 1024px !important;
 }
 
+.maxw-2xl {
+  max-width: $size-desktop-lg !important;
+}
+
 .p-205 {
   padding: 2.5rem;
 }
