--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -1,6 +1,5 @@
 .header {
-  @extend %container-fluid;
-  @extend %px-lq-5;
+  @include grid-container;
   // transform: scale(1); What is this for?
   transition: 0.25s all ease;
 }
