--- a/_includes/filter_component.html
+++ b/_includes/filter_component.html
@@ -44,7 +44,7 @@
 </div>
 {% endcapture %}
 
-<div class="container mb-5">
+<div class="grid-container mb-5">
   <div class="post-tags filter-post-tags"></div>
 
   <!-- Accordion card -->
