--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,7 +1,7 @@
 <article class="post">
 
   <div class="post-row">
-    <div class="container maxw-md">
+    <div class="grid-container maxw-md">
       <header class="post-header">
         <h1 class="post-title header-display-2">{{page.title}}</h1>
         <p class="post-byline">
