--- a/_includes/carry_culture_cta.html
+++ b/_includes/carry_culture_cta.html
@@ -1,6 +1,6 @@
 {% include cta.html
   header = "Become a culture carrier."
-  text = "Join our team of talented technologists working together to cultivate an incredible culture."
+  text = 'Join our team of talented technologists working together <br class="linebreak">to cultivate an incredible culture.'
   text_css_class = "page-subfooter-text-col"
   cta_path = "/careers/join/"
   cta = "Join Skylight"
