--- a/_includes/get_expert_answers_cta.html
+++ b/_includes/get_expert_answers_cta.html
@@ -1,6 +1,6 @@
 {% include cta.html
   header = "Get expert answers."
-  text = "Have a question about something? Our experts love to share what they know. Drop us an email and we'll get you connected."
+  text = 'Have a question about something? Our experts love to share what they know. <br class="linebreak">Drop us an email and we’ll get you connected.'
   text_css_class = "page-subfooter-text-col"
   cta_path = "mailto:communities@skylight.digital"
   cta = "Email us"
