--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -70,6 +70,7 @@ $font-size-xxxx-small: 0.75rem; // 12px
 
 // Spacing sizes
 $size-mobile-lg: 480px;
+$size-tablet: 640px;
 $size-md: 800px;
 $size-lg: 840px;
 $size-desktop: 1024px;
