--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -42,7 +42,7 @@
 }
 
 .hero-btn-group {
-  background: $gray-dark;
+  background: $brand-primary;
   bottom: 0;
   box-shadow: 0 0 9px rgba(0, 0, 0, 0.5);
   display: flex;
