--- a/_sass/pages/_projects.scss
+++ b/_sass/pages/_projects.scss
@@ -21,6 +21,7 @@
 @include multi-col-spacing('project-col', $mb-size: 4, $mb-md-size: 5);
 
 .project-footer {
+  font-family: $font-family-mono;
   line-height: 1;
   padding-bottom: 1.25rem;
   padding-top: 0;
