update maxws of policy pgs

--- a/_layouts/policy.html
+++ b/_layouts/policy.html
@@ -4,12 +4,8 @@ layout: default
 
 {% include page_header.html %}
 
-<div class="policy">
-  <div class="policy-row">
-    <div class="policy-col">
-      {{content}}
-    </div>
-  </div>
+<div class="grid-container maxw-md text">
+  {{content}}
 </div>
 
 {% include join_us_cta.html %}
