--- a/_sass/_accordion.scss
+++ b/_sass/_accordion.scss
@@ -72,7 +72,7 @@
 
 .accordion-card-body {
   padding: 20px;
-  border-bottom: 1px solid $brand-primary;
+  border-bottom: 1px solid $black;
   font-family: $font-family-mono;
 
   p + p {
