update nav colors

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -219,7 +219,7 @@ $nav-brand-height-sm-down: 40px;
 $nav-brand-width: 200px;
 $nav-brand-height: 50px;
 
-$nav-link-color: $body-color;
+$nav-link-color: $black;
 $nav-link-decoration: none;
 $nav-link-hover-color: $nav-link-color;
 $nav-link-hover-decoration: none;
