--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,6 +26,7 @@
               <li><a href="/work/services/">Services</a></li>
               <li><a href="/work/experience/">Experience</a></li>
               <li><a href="/work/toolkits/">Toolkits</a></li>
+              <li><a href="/work/services/service-design/">Service design</a></li>
             </ul>
           </div>
         </div>
