--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -209,10 +209,6 @@ $outline-light: 2px solid #f2f2f2;
   p {
     margin-top: 4px;
   }
-
-  h4 {
-    @include kicker;
-  }
 }
 
 .tuition-card-meta-info {
@@ -221,7 +217,7 @@ $outline-light: 2px solid #f2f2f2;
   }
 
   h4 {
-    margin-right: 1rem;
+    font-size: $font-size-medium;
   }
 }
 
