--- a/_layouts/policy.html
+++ b/_layouts/policy.html
@@ -4,8 +4,6 @@ layout: default
 
 {% include page_header.html %}
 
-<div class="grid-container maxw-md text">
-  {{content}}
-</div>
+<div class="grid-container maxw-md text prose">{{content}}</div>
 
 {% include join_us_cta.html %}
