--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -225,6 +225,14 @@ h6 {
   font-size: $font-size-x-large;
 }
 
-.capitalize{
+.capitalize {
   text-transform: capitalize;
+}
+
+.kicker {
+  @include kicker;
+}
+
+.font-mono {
+  font-family: $font-family-mono;
 }
